--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
 
   <script>
     // 1) Add your Supabase credentials
-    const SUPABASE_URL = "https://YOUR-PROJECT.ref.supabase.co"; // <-- replace
-    const SUPABASE_ANON_KEY = "YOUR-ANON-KEY"; // <-- replace (read-only)
-
+    const SUPABASE_URL = https://wjfgntocqjtwaqamlbgc.supabase.co
+    const SUPABASE_ANON_KEY = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ
     // 2) connect supabase
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
