--- a/index.html
+++ b/index.html
@@ -4,37 +4,34 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Live Monthly Gantt</title>
-  <!-- Frappe Gantt (MIT) -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.css" />
-  <script src="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.min.js"></script>
-  <!-- Supabase JS -->
+
+  <!-- Frappe Gantt (stable UMD build) -->
+  <link rel="stylesheet" href="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.css" />
+  <script src="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.min.js"></script>
+
+  <!-- Supabase JS v2 -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
   <style>
     :root {
-      --bg: #0b0c10;
-      --card: #111318;
-      --muted: #9aa4b2;
-      --text: #e8eef7;
-      --accent: #4f46e5;
-      --ok: #22c55e;
-      --warn: #f59e0b;
+      --bg: #0b0c10; --card: #111318; --muted: #9aa4b2; --text: #e8eef7;
+      --accent: #4f46e5; --ok: #22c55e; --warn: #f59e0b;
     }
     html,body{height:100%}
-    body { margin: 0; background: var(--bg); color: var(--text); font: 14px/1.45 system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji"; }
-    .wrap { max-width: 1100px; margin: 24px auto; padding: 0 16px; }
-    .topbar { display: flex; gap: 12px; align-items: center; justify-content: space-between; flex-wrap: wrap; }
-    .brand { display:flex; gap:10px; align-items:center; }
-    .live-dot { width:10px; height:10px; border-radius:50%; background: var(--ok); box-shadow: 0 0 0 6px rgba(34,197,94,.15); animation: pulse 1.8s infinite; }
-    @keyframes pulse { 0%{box-shadow:0 0 0 0 rgba(34,197,94,.5)} 70%{box-shadow:0 0 0 10px rgba(34,197,94,0)} 100%{box-shadow:0 0 0 0 rgba(34,197,94,0)} }
-    .card { background: linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,0)); border: 1px solid rgba(255,255,255,.08); border-radius: 16px; padding: 14px; }
-    .controls { display: flex; gap: 8px; align-items: center; flex-wrap: wrap; }
-    .controls > * { background: var(--card); color: var(--text); border: 1px solid rgba(255,255,255,.1); border-radius: 12px; padding: 10px 12px; }
-    select,button,input{ font: inherit }
-    .hint { color: var(--muted); font-size: 12px; }
-    #gantt { overflow: auto; background: var(--card); border: 1px solid rgba(255,255,255,.08); border-radius: 16px; min-height: 420px; }
-    .legend { display:flex; gap:16px; align-items:center; flex-wrap:wrap; color: var(--muted); font-size:12px; margin-top:8px }
-    .legend .sw { width:10px; height:10px; border-radius:3px; display:inline-block; margin-right:6px; }
-    .err { background:#2a1313; color:#ffb4b4; padding:8px 10px; border-radius:8px; margin-top:10px; display:none; }
+    body{margin:0;background:var(--bg);color:var(--text);font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,"Noto Sans"}
+    .wrap{max-width:1100px;margin:24px auto;padding:0 16px}
+    .topbar{display:flex;gap:12px;align-items:center;justify-content:space-between;flex-wrap:wrap}
+    .brand{display:flex;gap:10px;align-items:center}
+    .live-dot{width:10px;height:10px;border-radius:50%;background:var(--ok);box-shadow:0 0 0 6px rgba(34,197,94,.15);animation:pulse 1.8s infinite}
+    @keyframes pulse{0%{box-shadow:0 0 0 0 rgba(34,197,94,.5)}70%{box-shadow:0 0 0 10px rgba(34,197,94,0)}100%{box-shadow:0 0 0 0 rgba(34,197,94,0)}}
+    .card{background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,0));border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:14px}
+    .controls{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
+    .controls>*{background:var(--card);color:var(--text);border:1px solid rgba(255,255,255,.1);border-radius:12px;padding:10px 12px}
+    .hint{color:var(--muted);font-size:12px}
+    #gantt{overflow:auto;background:var(--card);border:1px solid rgba(255,255,255,.08);border-radius:16px;min-height:420px}
+    .legend{display:flex;gap:16px;align-items:center;flex-wrap:wrap;color:var(--muted);font-size:12px;margin-top:8px}
+    .legend .sw{width:10px;height:10px;border-radius:3px;display:inline-block;margin-right:6px}
+    .err{background:#2a1313;color:#ffb4b4;padding:8px 10px;border-radius:8px;margin-top:10px;display:none;white-space:pre-wrap}
   </style>
 </head>
 <body>
@@ -44,7 +41,7 @@
         <div class="live-dot" title="Realtime connected"></div>
         <div>
           <div style="font-weight:600">Live Monthly Gantt</div>
-          <div class="hint">Share this GitHub Pages link to show updates instantly</div>
+          <div class="hint">Share this link to show updates instantly</div>
         </div>
       </div>
       <div class="controls">
@@ -73,18 +70,15 @@
   </div>
 
   <script>
-    // Your Supabase credentials
-   const SUPABASE_URL = "https://wjfgntocqjtwaqam1bgc.supabase.co";
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
+    // 1) Supabase credentials — URL must start with https://
+    const SUPABASE_URL = "https://wjfgntocqjtwaqam1bgc.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
 
-    // Connect Supabase
+    // 2) Connect Supabase
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-    const state = {
-      view: 'Week',
-      monthKey: keyFromDate(new Date())
-    };
-
+    // 3) Page state
+    const state = { view: 'Week', monthKey: keyFromDate(new Date()) };
     const monthSelect = document.getElementById('monthSelect');
     const btnDay = document.getElementById('viewDay');
     const btnWeek = document.getElementById('viewWeek');
@@ -94,6 +88,7 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
     const errEl = document.getElementById('err');
     let gantt;
 
+    // 4) Init
     init();
 
     async function init(){
@@ -113,13 +108,12 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
 
     function setView(v){ state.view = v; if(gantt) gantt.change_view_mode(v); }
 
+    // 5) Month picker
     function buildMonthPicker(){
       monthSelect.innerHTML = '';
-      const base = new Date();
-      base.setDate(1);
-      for(let offset=-2; offset<=9; offset++){
-        const d = new Date(base);
-        d.setMonth(d.getMonth()+offset);
+      const base = new Date(); base.setDate(1);
+      for(let o=-2;o<=9;o++){
+        const d = new Date(base); d.setMonth(d.getMonth()+o);
         const key = keyFromDate(d);
         const opt = document.createElement('option');
         opt.value = key;
@@ -128,23 +122,23 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
         monthSelect.appendChild(opt);
       }
     }
-
     function keyFromDate(d){ return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`; }
-
     function monthRangeFromKey(key){
       const [y,m] = key.split('-').map(Number);
       const start = new Date(y, m-1, 1);
-      const end = new Date(y, m, 0, 23, 59, 59, 999);
+      const end   = new Date(y, m, 0, 23, 59, 59, 999);
       return { start, end };
     }
 
+    // 6) Data
     async function fetchTasks(){
       try {
         const { data, error } = await supabase
           .from('tasks')
           .select('*')
           .order('start_date', { ascending: true });
-        if(error) throw error;
+        if (error) throw error;
+
         const { start, end } = monthRangeFromKey(state.monthKey);
         return (data || []).filter(t => {
           const s = new Date(t.start_date);
@@ -152,46 +146,44 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
           return e >= start && s <= end;
         });
       } catch (e) {
-        showErr(e.message || String(e));
+        showErr(
+          `Failed to fetch from Supabase.\n` +
+          `• Message: ${e.message || String(e)}\n` +
+          `• Check URL, anon key, API > Exposed schemas includes 'public', and Auth > URL Configuration has your GitHub Pages origin.`
+        );
         console.error(e);
         return [];
       }
     }
 
+    // 7) Render Gantt
     async function render(){
       const rows = await fetchTasks();
       const tasks = rows.map(r => ({
         id: r.id,
         name: r.title,
-        start: formatDate(r.start_date),
-        end: formatDate(r.end_date || r.start_date),
+        start: toYMD(r.start_date),
+        end: toYMD(r.end_date || r.start_date),
         progress: Number(r.progress || 0),
         dependencies: (r.dependencies || '').trim(),
-        custom_class: progressClass(Number(r.progress || 0), r.color)
+        custom_class: progressClass(Number(r.progress || 0))
       }));
 
       ganttEl.innerHTML = '';
+      // Gantt constructor is provided by frappe-gantt UMD build
       gantt = new Gantt('#gantt', tasks, {
         view_mode: state.view,
         date_format: 'YYYY-MM-DD',
         language: 'en',
-        custom_popup_html: task => {
-          return `
-            <div class="details-container">
-              <div style="font-weight:600">${escapeHtml(task.name)}</div>
-              <div class="hint">${task._start.format('ll')} → ${task._end.format('ll')} · ${task.progress}%</div>
-            </div>`;
-        }
+        custom_popup_html: task => `
+          <div class="details-container">
+            <div style="font-weight:600">${escapeHtml(task.name)}</div>
+            <div class="hint">${task._start.format('ll')} → ${task._end.format('ll')} · ${task.progress}%</div>
+          </div>`
       });
     }
 
-    function progressClass(p, color){
-      const base = 'gantt-task';
-      const done = p >= 100;
-      const mid = p > 0 && p < 100;
-      return `${base} ${done ? 'is-done' : mid ? 'is-doing' : 'is-todo'}`;
-    }
-
+    // 8) Realtime refresh
     function subscribeRealtime(){
       supabase.channel('public:tasks')
         .on('postgres_changes', { event: '*', schema: 'public', table: 'tasks' }, debounce(async () => {
@@ -200,26 +192,12 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
         .subscribe();
     }
 
-    function formatDate(d){
-      const x = new Date(d);
-      const yyyy = x.getFullYear();
-      const mm = String(x.getMonth()+1).padStart(2, '0');
-      const dd = String(x.getDate()).padStart(2, '0');
-      return `${yyyy}-${mm}-${dd}`;
-    }
-
-    function debounce(fn, wait){
-      let t; return (...args) => { clearTimeout(t); t = setTimeout(() => fn.apply(this,args), wait); };
-    }
-
-    function escapeHtml(s){
-      return String(s).replace(/[&<>\"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#039;'}[c]));
-    }
-
-    function showErr(msg) {
-      errEl.style.display = 'block';
-      errEl.textContent = 'Error: ' + msg + ' — Check your Supabase URL, anon key, RLS policy, and that the table has data.';
-    }
+    // helpers
+    function progressClass(p){ const base='gantt-task'; return `${base} ${p>=100?'is-done':p>0?'is-doing':'is-todo'}`; }
+    function toYMD(d){ const x=new Date(d); const y=x.getFullYear(), m=String(x.getMonth()+1).padStart(2,'0'), dd=String(x.getDate()).padStart(2,'0'); return `${y}-${m}-${dd}`; }
+    function debounce(fn,wait){ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn.apply(this,a),wait); } }
+    function escapeHtml(s){ return String(s).replace(/[&<>\"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[c])); }
+    function showErr(msg){ errEl.style.display='block'; errEl.textContent = msg; }
   </script>
 
   <style>
