--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>UDP Programme Comms Dashboard</title>
+
+  <!-- Frappe Gantt (MIT) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.css" />
   <script src="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.min.js"></script>
+
+  <!-- Supabase JS v2 -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
   <style>
     :root {
       --bg: #0b0c10;
@@ -30,8 +35,15 @@
     select,button,input{ font: inherit }
     .hint { color: var(--muted); font-size: 12px; }
     #gantt { overflow: auto; background: var(--card); border: 1px solid rgba(255,255,255,.08); border-radius: 16px; }
+
     .legend { display:flex; gap:16px; align-items:center; flex-wrap:wrap; color: var(--muted); font-size:12px; margin-top:8px }
     .legend .sw { width:10px; height:10px; border-radius:3px; display:inline-block; margin-right:6px; }
+
+    /* nicer popup card */
+    .details-card {
+      background:#0f1218; border:1px solid rgba(255,255,255,.1);
+      padding:10px 12px; border-radius:10px
+    }
   </style>
 </head>
 <body>
@@ -65,15 +77,14 @@
   </div>
 
   <script>
-    const SUPABASE_URL = "https://YOUR-PROJECT.ref.supabase.co"; // <-- replace
-    const SUPABASE_ANON_KEY = "YOUR-ANON-KEY"; // <-- replace (read-only)
+    // ---- 1) YOUR SUPABASE CREDENTIALS (replace these two lines) ----
+    const SUPABASE_URL = "https://wjfgntocqjtwaqamlbgc.supabase.co";   // e.g. https://wjfgntocqjtwaqam1bgc.supabase.co
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
+    // ----------------------------------------------------------------
 
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-    const state = {
-      view: 'Week',
-      monthKey: keyFromDate(new Date())
-    };
+    const state = { view: 'Week', monthKey: keyFromDate(new Date()) };
 
     const monthSelect = document.getElementById('monthSelect');
     const btnDay = document.getElementById('viewDay');
@@ -104,11 +115,9 @@
 
     function buildMonthPicker(){
       monthSelect.innerHTML = '';
-      const base = new Date();
-      base.setDate(1);
+      const base = new Date(); base.setDate(1);
       for(let offset=-2; offset<=9; offset++){
-        const d = new Date(base);
-        d.setMonth(d.getMonth()+offset);
+        const d = new Date(base); d.setMonth(d.getMonth()+offset);
         const key = keyFromDate(d);
         const opt = document.createElement('option');
         opt.value = key;
@@ -137,7 +146,7 @@
       return (data || []).filter(t => {
         const s = new Date(t.start_date);
         const e = new Date(t.end_date || t.start_date);
-        return e >= start && s <= end;
+        return e >= start && s <= end; // overlaps month
       });
     }
 
@@ -150,7 +159,7 @@
         end: formatDate(r.end_date || r.start_date),
         progress: Number(r.progress || 0),
         dependencies: (r.dependencies || '').trim(),
-        custom_class: progressClass(Number(r.progress || 0), r.color),
+        custom_class: statusClass(Number(r.progress || 0)),
         notes: r.notes || ''
       }));
 
@@ -161,28 +170,40 @@
         language: 'en',
         custom_popup_html: task => {
           return `
-            <div class="details-container">
+            <div class="details-card">
               <div style="font-weight:600">${escapeHtml(task.name)}</div>
               <div class="hint">${task._start.format('ll')} → ${task._end.format('ll')} · ${task.progress}%</div>
-              <div style="margin-top:4px;font-size:12px;color:#9aa4b2">${escapeHtml(task.notes)}</div>
+              <div style="margin-top:6px;font-size:12px;color:#cbd5e1">${escapeHtml(task.notes)}</div>
             </div>`;
         }
       });
+
+      // add simple hover tooltips with notes (so you see text on hover too)
+      setHoverTooltips(tasks);
     }
 
-    function progressClass(p, color){
-      const base = 'gantt-task';
-      const done = p >= 100;
-      const mid = p > 0 && p < 100;
-      return `${base} ${done ? 'is-done' : mid ? 'is-doing' : 'is-todo'}`;
+    function statusClass(p){
+      const done = p >= 100, doing = p > 0 && p < 100;
+      return done ? 'is-done' : doing ? 'is-doing' : 'is-todo';
     }
 
     function subscribeRealtime(){
       supabase.channel('public:tasks')
-        .on('postgres_changes', { event: '*', schema: 'public', table: 'tasks' }, debounce(async () => {
-          await render();
-        }, 400))
+        .on('postgres_changes', { event: '*', schema: 'public', table: 'tasks' }, debounce(render, 300))
         .subscribe();
+    }
+
+    function setHoverTooltips(tasks){
+      const idToNotes = Object.fromEntries(tasks.map(t => [String(t.id), t.notes || '']));
+      // bars are <rect> inside elements with [data-id]
+      document.querySelectorAll('.gantt .bar-wrapper').forEach(wrap => {
+        const id = wrap.getAttribute('data-id');
+        const rect = wrap.querySelector('.bar');
+        if(rect){
+          const text = (idToNotes[id] || '').trim();
+          rect.setAttribute('title', text || wrap.textContent.trim());
+        }
+      });
     }
 
     function formatDate(d){
@@ -198,7 +219,7 @@
     }
 
     function escapeHtml(s){
-      return String(s).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#039;'}[c]));
+      return String(s).replace(/[&<>\"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','\"':'&quot;','\'':'&#039;'}[c]));
     }
   </script>
 
